--- a/package.json
+++ b/package.json
@@ -3,25 +3,38 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "eslint": "eslint . --ext .ts,.tsx --fix"
   },
   "dependencies": {
+    "@apollo/client": "^3.9.4",
+    "@material-tailwind/react": "^2.1.4",
+    "akar-icons": "^1.9.30",
+    "framer-motion": "^11.0.6",
+    "graphql": "^16.8.1",
+    "next": "14.1.0",
+    "next-auth": "^4.24.6",
+    "next-svgr": "^0.0.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-hook-form": "^7.50.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "18.2.19",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "postcss": "^8",
+    "prettier": "^3.2.5",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
