--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react": "18.2.19",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
