--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NEXT_PUBLIC_API_URL = https://api.escuelajs.co
-GOOGLE_CLIENT_ID = ""
-GOOGLE_SECRET = ""
+GOOGLE_CLIENT_ID = "clientidss"
+GOOGLE_SECRET = "somesecret"
 
 NEXTAUTH_SECRET= "next-project"
 NEXTAUTH_URL="http://localhost:3000"
