--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,6 @@
         "plugin:import/warnings",
         "plugin:@typescript-eslint/recommended",
         "next/core-web-vitals"
-        //  "@typescript-eslint/parser"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -219,225 +218,7 @@
         ],
         "semi": [
             "error",
-            "always"
-        ],
-        "space-in-parens": [
-            "error",
             "never"
-        ],
-        "arrow-parens": [
-            "error",
-            "always"
-        ],
-       
-        "brace-style": [
-            "error",
-            "1tbs",
-            {
-                "allowSingleLine": false
-            }
-        ],
-        "func-style": [
-            "error",
-            "declaration",
-            {
-                "allowArrowFunctions": true
-            }
-        ],
-        "no-alert": [
-            "error"
-        ],
-        "no-await-in-loop": [
-            "error"
-        ],
-        "no-caller": [
-            "error"
-        ],
-        "no-dupe-keys": [
-            "error"
-        ],
-        "no-bitwise": [
-            "error"
-        ],
-        "no-unneeded-ternary": [
-            "error"
-        ],
-        "no-lonely-if": [
-            "error"
-        ],
-        "no-trailing-spaces": [
-            "error"
-        ],
-        "no-whitespace-before-property": [
-            "error"
-        ],
-        "no-case-declarations": [
-            "error"
-        ],
-        "no-div-regex": [
-            "error"
-        ],
-        "no-eval": [
-            "error"
-        ],
-        "no-ex-assign": [
-            "error"
-        ],
-        "no-extend-native": [
-            "error"
-        ],
-        "no-fallthrough": [
-            "error"
-        ],
-        "no-floating-decimal": [
-            "error"
-        ],
-        "no-implicit-coercion": [
-            "error"
-        ],
-        "no-label-var": [
-            "error"
-        ],
-        "no-lone-blocks": [
-            "error"
-        ],
-        "no-multi-assign": [
-            "error"
-        ],
-        "no-multi-spaces": [
-            "error"
-        ],
-        "no-multi-str": [
-            "error"
-        ],
-        "no-negated-condition": [
-            "error"
-        ],
-        "no-new": [
-            "error"
-        ],
-        "no-new-func": [
-            "error"
-        ],
-        "no-new-object": [
-            "error"
-        ],
-        "no-new-wrappers": [
-            "error"
-        ],
-        "no-octal-escape": [
-            "error"
-        ],
-        "no-param-reassign": [
-            "error"
-        ],
-        "no-console": [
-            "warn"
-        ],
-        "no-proto": [
-            "error"
-        ],
-        "no-useless-return": [
-            "error"
-        ],
-        "no-useless-concat": [
-            "error"
-        ],
-        "no-useless-constructor": [
-            "error"
-        ],
-        "no-useless-escape": [
-            "error"
-        ],
-        "no-use-before-define": [
-            "error",
-            {
-                "functions": false
-            }
-        ],
-        "arrow-spacing": [
-            "error"
-        ],
-        "new-cap": [
-            "error",
-            {
-                "capIsNew": false
-            }
-        ],
-        "no-var": [
-            "error"
-        ],
-        "require-await": [
-            "error"
-        ],
-        "prefer-template": [
-            "error"
-        ],
-        "prefer-spread": [
-            "error"
-        ],
-        "prefer-numeric-literals": [
-            "error"
-        ],
-        "prefer-destructuring": [
-            "error"
-        ],
-        "prefer-const": [
-            "error"
-        ],
-        "prefer-arrow-callback": [
-            "error"
-        ],
-        "prefer-rest-params": [
-            "error"
-        ],
-        "no-useless-computed-key": [
-            "error"
-        ],
-        "space-infix-ops": [
-            "error"
-        ],
-        "accessor-pairs": [
-            "error"
-        ],
-        "array-callback-return": [
-            "error"
-        ],
-        "space-before-blocks": [
-            "error",
-            "always"
-        ],
-        "object-curly-spacing": [
-            "error",
-            "always"
-        ],
-        "operator-assignment": [
-            "error",
-            "always"
-        ],
-        "object-shorthand": [
-            "error",
-            "always"
-        ],
-        "template-curly-spacing": [
-            "error",
-            "never"
-        ],
-        "rest-spread-spacing": [
-            "error",
-            "never"
-        ],
-        "eqeqeq": [
-            "warn",
-            "always"
-        ],
-        "quotes": [
-            "error",
-            "double"
-        ],
-        "semi": [
-            "error",
-            "always"
         ],
         "space-in-parens": [
             "error",
@@ -503,145 +284,90 @@
         "no-extend-native": [
             "error"
         ],
-        "no-fallthrough": [
-            "error"
-        ],
-        "no-floating-decimal": [
-            "error"
-        ],
-        "no-implicit-coercion": [
-            "error"
-        ],
-        "no-label-var": [
-            "error"
-        ],
-        "no-lone-blocks": [
-            "error"
-        ],
-        "no-multi-assign": [
-            "error"
-        ],
-        "no-multi-spaces": [
-            "error"
-        ],
-        "no-multi-str": [
-            "error"
-        ],
-        "no-negated-condition": [
-            "error"
-        ],
-        "no-new": [
-            "error"
-        ],
-        "no-new-func": [
-            "error"
-        ],
-        "no-new-object": [
-            "error"
-        ],
-        "no-new-wrappers": [
-            "error"
-        ],
-        "no-octal-escape": [
-            "error"
-        ],
-        "no-param-reassign": [
-            "error"
-        ],
-        "no-proto": [
-            "error"
-        ],
-        "no-useless-return": [
-            "error"
-        ],
-        "no-useless-concat": [
-            "error"
-        ],
-        "no-useless-constructor": [
-            "error"
-        ],
-        "no-useless-escape": [
-            "error"
-        ],
-        "no-use-before-define": [
-            "error",
-            {
-                "functions": false
-            }
-        ],
-        "max-len": [
-            "error",
-            {
-                "code": 124,
-                "ignoreUrls": true,
-                "ignoreStrings": true,
-                "ignoreRegExpLiterals": true,
-                "ignoreTemplateLiterals": true
-            }
-        ],
-        "semi-spacing": [
-            "error",
-            {
-                "before": false,
-                "after": true
-            }
-        ],
-        "space-before-function-paren": [
-            "error",
-            {
-                "anonymous": "always",
-                "named": "never",
-                "asyncArrow": "always"
-            }
-        ],
-        "space-unary-ops": [
-            "error",
-            {
-                "words": true,
-                "nonwords": false,
-                "overrides": {
-                    "typeof": false
-                }
-            }
-        ],
-        "no-multiple-empty-lines": [
-            "error",
-            {
-                "max": 3,
-                "maxEOF": 0,
-                "maxBOF": 0
-            }
-        ],
-        "import/order": [
-            "error",
-            {
-                "groups": [
-                    "type",
-                    "builtin",
-                    "external",
-                    "internal"
-                ],
-                "newlines-between": "always",
-                "alphabetize": {
-                    "order": "asc",
-                    "caseInsensitive": true
-                }
-            }
-        ],
-        "prettier/prettier": [
-            "error",
-            {
-                "printWidth": 124,
-                "trailingComma": "all",
-                "bracketSameLine": true,
-                "jsxBracketSameLine": true,
-                "arrowParens": "always",
-                "tabWidth": 2
-            }
-        ],
-        "react/jsx-key": "error",
-        "react/react-in-jsx-scope": "off",
-        "react/prop-types": "off",
-        "react/no-unknown-property": "error"
-    }
+        "no-fallthrough": ["error"
+    ],
+    "no-floating-decimal": [
+        "error"
+    ],
+    "no-implicit-coercion": [
+        "error"
+    ],
+    "no-label-var": [
+        "error"
+    ],
+    "no-lone-blocks": [
+        "error"
+    ],
+    "no-multi-assign": [
+        "error"
+    ],
+    "no-multi-spaces": [
+        "error"
+    ],
+    "no-multi-str": [
+        "error"
+    ],
+    "no-negated-condition": [
+        "error"
+    ],
+    "no-new": [
+        "error"
+    ],
+    "no-new-func": [
+        "error"
+    ],
+    "no-new-object": [
+        "error"
+    ],
+    "no-new-wrappers": [
+        "error"
+    ],
+    "no-octal-escape": [
+        "error"
+    ],
+    "no-param-reassign": [
+        "error"
+    ],
+    "no-console": [
+        "warn"
+    ],
+    "no-proto": [
+        "error"
+    ],
+    "no-useless-return": [
+        "error"
+    ],
+    "no-useless-concat": [
+        "error"
+    ],
+    "no-useless-constructor": [
+        "error"
+    ],
+    "no-useless-escape": [
+        "error"
+    ],
+    "no-use-before-define": [
+        "error",
+        {
+            "functions": false
+        }
+    ],
+    "max-len": [
+        "error",
+        {
+            "code": 124,
+            "ignoreUrls": true,
+            "ignoreStrings": true,
+            "ignoreRegExpLiterals": true,
+            "ignoreTemplateLiterals": true
+        }
+    ],
+    "semi-spacing": [
+        "error",
+        {
+            "before": false,
+            "after": false
+        }
+    ]
+}
 }
