--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,373 +1,60 @@
 {
-    "root": true,
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
+    },
     "env": {
         "browser": true,
-        "es2021": true
+        "es2021": true,
+        "node": true
     },
     "extends": [
         "eslint:recommended",
         "plugin:react/recommended",
-        "plugin:import/recommended",
-        "plugin:import/errors",
-        "plugin:import/warnings",
-        "plugin:@typescript-eslint/recommended",
-        "next/core-web-vitals"
+        "plugin:react-hooks/recommended",
+        "plugin:jsx-a11y/recommended"
     ],
-    "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module",
-        "project": "tsconfig.json",
-        "tsconfigRootDir": "./"
+        "ecmaFeatures": {
+            "jsx": true
+        },
+        "ecmaVersion": 12,
+        "sourceType": "module"
     },
     "plugins": [
         "react",
-        "@typescript-eslint",
-        "eslint-plugin-prettier",
-        "import"
+        "jsx-a11y"
     ],
-    "settings": {
-        "react": {
-            "version": "detect"
-        },
-        "import/resolver": {
-            "typescript": {}
-        }
-    },
     "rules": {
-        "@typescript-eslint/no-unused-vars": [
-            "warn",
-            {
-                "vars": "all",
-                "args": "after-used",
-                "ignoreRestSiblings": false
-            }
-        ],
-        "@typescript-eslint/no-explicit-any": [
-            "off"
-        ],
-        "@typescript-eslint/array-type": [
-            "error",
-            {
-                "default": "array",
-                "readonly": "array"
-            }
-        ],
-        "@typescript-eslint/consistent-type-exports": [
-            "error",
-            {
-                "fixMixedExportsWithInlineTypeSpecifier": true
-            }
-        ],
-        "@typescript-eslint/consistent-type-imports": [
-            "error",
-            {
-                "prefer": "type-imports"
-            }
-        ],
-        "@typescript-eslint/ban-ts-comment": [
-            "error",
-            {
-                "ts-expect-error": "allow-with-description",
-                "ts-ignore": false,
-                "ts-nocheck": false,
-                "ts-check": false
-            }
-        ],
-        "@typescript-eslint/method-signature-style": [
-            "error",
-            "property"
-        ],
-        "@typescript-eslint/adjacent-overload-signatures": [
-            "error"
-        ],
-        "@typescript-eslint/await-thenable": [
-            "error"
-        ],
-        "@typescript-eslint/ban-tslint-comment": [
-            "warn"
-        ],
-        "@typescript-eslint/no-confusing-non-null-assertion": [
-            "error"
-        ],
-        "@typescript-eslint/no-duplicate-enum-values": [
-            "error"
-        ],
-        "@typescript-eslint/no-dynamic-delete": [
-            "error"
-        ],
-        "@typescript-eslint/no-empty-interface": [
-            "error"
-        ],
-        "@typescript-eslint/no-extra-non-null-assertion": [
-            "error"
-        ],
-        "@typescript-eslint/no-for-in-array": [
-            "error"
-        ],
-        "@typescript-eslint/no-inferrable-types": [
-            "error"
-        ],
-        "@typescript-eslint/no-invalid-this": [
-            "error"
-        ],
-        "no-invalid-this": "off",
-        "@typescript-eslint/no-loop-func": [
-            "error"
-        ],
-        "no-loop-func": "off",
-        "@typescript-eslint/no-loss-of-precision": [
-            "error"
-        ],
-        "no-loss-of-precision": "off",
-        "@typescript-eslint/no-misused-new": [
-            "error"
-        ],
-        "no-array-constructor": "off",
-        "@typescript-eslint/no-empty-function": [
-            "error"
-        ],
-        "no-empty-function": "off",
-        "@typescript-eslint/no-dupe-class-members": [
-            "error"
-        ],
-        "no-dupe-class-members": "off",
-        "@typescript-eslint/no-implied-eval": [
-            "error"
-        ],
-        "no-implied-eval": "off",
-        "@typescript-eslint/no-extra-semi": [
-            "error"
-        ],
-        "no-extra-semi": "off",
-        "arrow-spacing": [
-            "error"
-        ],
-        "new-cap": [
-            "error",
-            {
-                "capIsNew": false
-            }
-        ],
-        "no-var": [
-            "error"
-        ],
-        "require-await": [
-            "error"
-        ],
-        "prefer-template": [
-            "error"
-        ],
-        "prefer-spread": [
-            "error"
-        ],
-        "prefer-numeric-literals": [
-            "error"
-        ],
-        "prefer-destructuring": [
-            "error"
-        ],
-        "prefer-const": [
-            "error"
-        ],
-        "prefer-arrow-callback": [
-            "error"
-        ],
-        "prefer-rest-params": [
-            "error"
-        ],
-        "no-useless-computed-key": [
-            "error"
-        ],
-        "space-infix-ops": [
-            "error"
-        ],
-        "accessor-pairs": [
-            "error"
-        ],
-        "array-callback-return": [
-            "error"
-        ],
-        "space-before-blocks": [
-            "error",
-            "always"
-        ],
-        "object-curly-spacing": [
-            "error",
-            "always"
-        ],
-        "operator-assignment": [
-            "error",
-            "always"
-        ],
-        "object-shorthand": [
-            "error",
-            "always"
-        ],
-        "template-curly-spacing": [
-            "error",
-            "never"
-        ],
-        "rest-spread-spacing": [
-            "error",
-            "never"
-        ],
-        "quotes": [
-            "error",
-            "double"
-        ],
-        "semi": [
-            "error",
-            "never"
-        ],
-        "space-in-parens": [
-            "error",
-            "never"
-        ],
-        "arrow-parens": [
-            "error",
-            "always"
-        ],
-        "brace-style": [
-            "error",
-            "1tbs",
-            {
-                "allowSingleLine": false
-            }
-        ],
-        "func-style": [
-            "error",
-            "declaration",
-            {
-                "allowArrowFunctions": true
-            }
-        ],
-        "no-alert": [
-            "error"
-        ],
-        "no-await-in-loop": [
-            "error"
-        ],
-        "no-caller": [
-            "error"
-        ],
-        "no-dupe-keys": [
-            "error"
-        ],
-        "no-bitwise": [
-            "error"
-        ],
-        "no-unneeded-ternary": [
-            "error"
-        ],
-        "no-lonely-if": [
-            "error"
-        ],
-        "no-trailing-spaces": [
-            "error"
-        ],
-        "no-whitespace-before-property": [
-            "error"
-        ],
-        "no-case-declarations": [
-            "error"
-        ],
-        "no-div-regex": [
-            "error"
-        ],
-        "no-eval": [
-            "error"
-        ],
-        "no-ex-assign": [
-            "error"
-        ],
-        "no-extend-native": [
-            "error"
-        ],
-        "no-fallthrough": ["error"
-    ],
-    "no-floating-decimal": [
-        "error"
-    ],
-    "no-implicit-coercion": [
-        "error"
-    ],
-    "no-label-var": [
-        "error"
-    ],
-    "no-lone-blocks": [
-        "error"
-    ],
-    "no-multi-assign": [
-        "error"
-    ],
-    "no-multi-spaces": [
-        "error"
-    ],
-    "no-multi-str": [
-        "error"
-    ],
-    "no-negated-condition": [
-        "error"
-    ],
-    "no-new": [
-        "error"
-    ],
-    "no-new-func": [
-        "error"
-    ],
-    "no-new-object": [
-        "error"
-    ],
-    "no-new-wrappers": [
-        "error"
-    ],
-    "no-octal-escape": [
-        "error"
-    ],
-    "no-param-reassign": [
-        "error"
-    ],
-    "no-console": [
-        "warn"
-    ],
-    "no-proto": [
-        "error"
-    ],
-    "no-useless-return": [
-        "error"
-    ],
-    "no-useless-concat": [
-        "error"
-    ],
-    "no-useless-constructor": [
-        "error"
-    ],
-    "no-useless-escape": [
-        "error"
-    ],
-    "no-use-before-define": [
-        "error",
+        "react/react-in-jsx-scope": "off",
+        "jsx-a11y/anchor-is-valid": "off"
+    },
+    "overrides": [
         {
-            "functions": false
-        }
-    ],
-    "max-len": [
-        "error",
-        {
-            "code": 124,
-            "ignoreUrls": true,
-            "ignoreStrings": true,
-            "ignoreRegExpLiterals": true,
-            "ignoreTemplateLiterals": true
-        }
-    ],
-    "semi-spacing": [
-        "error",
-        {
-            "before": false,
-            "after": false
+            "files": [
+                "**/*.ts",
+                "**/*.tsx"
+            ],
+            "parser": "@typescript-eslint/parser",
+            "plugins": [
+                "@typescript-eslint"
+            ],
+            "extends": [
+                "plugin:@typescript-eslint/recommended"
+            ],
+            "rules": {
+                "react/prop-types": "off",
+                "@typescript-eslint/no-unused-vars": "error",
+                "@typescript-eslint/explicit-function-return-type": [
+                    "warn",
+                    {
+                        "allowExpressions": true,
+                        "allowConciseArrowFunctionExpressionsStartingWithVoid": true
+                    }
+                ],
+                "@typescript-eslint/ban-ts-comment": "warn"
+            }
         }
     ]
-}
 }
