--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "eslint": "eslint . --ext .ts,.tsx --fix"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@apollo/client": "^3.9.4",
     "@material-tailwind/react": "^2.1.4",
     "akar-icons": "^1.9.30",
+    "css-select": "^5.1.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "framer-motion": "^11.0.6",
     "graphql": "^16.8.1",
     "next": "14.1.0",
@@ -30,7 +36,7 @@
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "postcss": "^8",
