--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -45,7 +45,14 @@
             ],
             "rules": {
                 "react/prop-types": "off",
-                "@typescript-eslint/no-unused-vars": "error",
+                "@typescript-eslint/no-unused-vars": [
+                    "warn",
+                    {
+                        "vars": "all",
+                        "args": "after-used",
+                        "ignoreRestSiblings": false
+                    }
+                ],
                 "@typescript-eslint/explicit-function-return-type": [
                     "warn",
                     {
@@ -53,7 +60,10 @@
                         "allowConciseArrowFunctionExpressionsStartingWithVoid": true
                     }
                 ],
-                "@typescript-eslint/ban-ts-comment": "warn"
+                "@typescript-eslint/ban-ts-comment": "warn",
+                "@typescript-eslint/no-explicit-any": [
+                    "off"
+                ]
             }
         }
     ]
